fixed minor bug with contact form - message box collapsing if filled

--- a/src/Css/Form.css
+++ b/src/Css/Form.css
@@ -70,6 +70,9 @@
 		font-size: 14px;
 		height: 150px !important;
 	}
+	.section-5 form textarea:not(:placeholder-shown){
+		height: 150px !important;
+	}
 	.section-5 form textarea:not(:focus) ~ label{
 		height: 50px !important;
 	}
